<resources>
    <string name="app_name">Typegram</string>
    <string name="error_network">Что то пошло не так</string>
    <string name="retry">Повторить</string>

    <!-- Article list -->
    <string name="main_title">typegram</string>
    <string name="new_article">New article</string>

    <!-- Menu -->
    <string name="open_in_web">Open in web</string>
    <string name="share">Share</string>
    
    <!-- Login -->
    <string name="sign_in">Sign in</string>
    <string name="sign_in_descr">Need an account?</string>
    <string name="username">username</string>
    <string name="password">password</string>

    <string name="log_out">Log out</string>

    <!-- Registration -->
    <string name="sign_up">Sign up</string>
    <string name="sign_already_account">Already have an account? Click here</string>
    <string name="sign_up_descr">9.5 seconds will take registration. Enter your login, password and put 2 daws below.</string>
    <string name="sing_up_username_hint">username, alphanum, 1..20</string>
    <string name="sign_up_password_hint">password, 6..255</string>
    <string name="sign_up_checkbox_1">I am here to spam and destroy this site</string>
    <string name="sign_up_checkbox_2">I have read and accept the</string>
    <string name="sign_up_checkbox_3">I have read and accept the</string>

    <string name="comment">Comment</string>

    <!-- Article -->
    <string name="text_hint">text, markdown, 10..65536</string>

    <!-- Article Editor -->
    <string name="editor_hint_title">title, text, 0..255</string>
    <string name="editor_hint_ogimage">image, link, 0..255</string>
    <string name="editor_hint_body">text, markdown, 10..65536</string>
    <string name="editor_hint_tag">tag, without #, alphanum, 0..20</string>
    <string name="publish">Publish</string>
    <string name="preview">Preview</string>
    <string name="need_permissions">Need permissions</string>

</resources>
